After adding content type(second version)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html Content-Type: application/x-web-app-manifest+json>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="application/x-web-app-manifest+json">
