Final commit after adding meta data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta http-equiv="Content-Type" content="application/x-web-app-manifest+json">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>Hungry Birds</title>
+
+<meta content="It's a story of a bird which was looking for food here and there. She was really hungry and also needs to feed her child. And from this point our game begins, you need to tap on your screen to fly up the bird through tree branches of the forest. Feed her as much as you can. This way you can make her happy as well as build up your score. Just tap to fly. Simple control, easy to navigate. Be aware of the rotten fruits to avoid the negative score. Have fun!" name="description"></meta>
+<link href="/HungryBird/images/logo60.png" rel="apple-touch-icon"></link>
+<meta content="/HungryBird/images/logo60.png" property="og:image"></meta>
+
+<meta content="Hungry Birds" property="og:title"></meta>
+<meta content="http://omleteit.com" property="og:url"></meta>
+<meta content="It's a story of a bird which was looking for food here and there. She was really hungry and also needs to feed her child. And from this point our game begins, you need to tap on your screen to fly up the bird through tree branches of the forest. Feed her as much as you can. This way you can make her happy as well as build up your score. Just tap to fly. Simple control, easy to navigate. Be aware of the rotten fruits to avoid the negative score. Have fun!"></meta>
+<meta content="OmeletIT" name="author"></meta>
+<meta content="Game, Fun, Entertainment" name="keywords"></meta>
+
+<link href="/HungryBird/images/logo60.png" rel="Shortcut Icon"></link>
 </head>
 <body>
 <header class="clearfix">
